Made some changes as requested also brought back config.json.template